# InfoTerminal

./: .coveragerc  .dockerignore  .env.dev.ports  .env.example  .gitignore  .gitignore.bak.20250902233015  .gitleaks.toml  .markdownlint.json  .markdownlint.jsonc  .mlc.config.json  .pre-commit-config.yaml  .prettierignore  .secretsguardian.yaml  .tarignore  AGENTS.md  AUTH_IMPLEMENTATION_COMPLETE.md  BUILD_ERROR_FIXES.md  CHANGELOG.md  COMPLETION_SUMMARY_v0.2.0.md  CONTRIBUTING.md  Checkliste.md  DEPLOYMENT_v0.2.0.md  DOCKER_BUILD_FIX.md  DOCKER_COMPLETION_SUMMARY.md  DOCKER_REQUIREMENTS_FIX.md  DOCKER_SETUP.md  DOCS_DIFF.md  IMPLEMENTATION_COMPLETE_v0.2.0.md  MIGRATION_SUMMARY.md  Makefile  NOTICE  Prompt.md  README.md  README.md.bak.1756857746  README.md.bak.20250902233124  README.md.bak.new  REPORT  ROADMAP.md  ROADMAP_STATUS.md  SECURITY.md  (+48 more)
cli/: CLI_AUSBAU_COMPLETE.md  README.md  pyproject.toml
cli/infoterminal_cli/: cli.py
cli/it_cli/: __init__.py  __main__.py  banner.py  config.py  http.py  infra.py  plugins.py  root.py  utils.py
cli/it_cli/commands/: __init__.py  agents.py  analytics.py  auth.py  cache.py  collab.py  fe.py  feedback.py  forensics.py  graph.py  infra.py  media.py  nlp.py  ops.py  perf.py  plugins.py  rag.py  search.py  settings.py  tui.py  verify.py  views.py  ws.py
cli/it_cli/renderers/: charts.py  graphs.py  tables.py
cli/it_cli/utils/: __init__.py  compose.py
cli/tests/: conftest.py
cli/tests/integration/: test_cli_api_parity.py
cli/tests/performance/: test_cli_performance.py
services/auth-service/: Dockerfile  README.md  pyproject.toml
services/auth-service/src/auth_service/: __init__.py  app.py  app_v1.py
services/doc-entities/: .env.example  .env.local.example  CONSOLIDATION_COMPLETE.md  Dockerfile  README.md  app.py  app_legacy.py  app_v1.py  build_and_test.sh  db.py  dev.sh  dev_run.sh  fuzzy_matcher.py  metrics.py  models.py  nlp_client.py  nlp_loader.py  pyproject.toml  relation_extractor.py  requirements.txt  resolver.py  validate_consolidation.py
services/doc-entities/common/: request_id.py
services/doc-entities/migrations/: 001_init.py  001_init.sql  002_add_context.py  002_add_context.sql  003_add_relations.py  runner.py  utils.py
services/doc-entities/models/: api_models.py
services/doc-entities/obs/: otel_boot.py
services/doc-entities/routers/: core_v1.py  doc_entities_v1.py
services/doc-entities/tests/: conftest.py  test_annotate.py  test_api.py  test_fuzzy_integration.py  test_health.py  test_nlp_client.py  test_nlp_loader.py  test_resolver_gold.py
services/feed-ingestor/: pyproject.toml
services/feed-ingestor/app/: main.py
services/feed-ingestor/tests/: conftest.py  test_otx_connector.py  test_rss_connector.py
services/flowise-connector/: Dockerfile  app_v1.py  pyproject.toml
services/flowise-connector/app/: __init__.py  errors.py  http_client.py  it_logging.py  main.py  policy.py
services/flowise-connector/models/: __init__.py  requests.py  responses.py
services/flowise-connector/routers/: __init__.py  agents_v1.py  core_v1.py
services/flowise-connector/tests/: conftest.py  test_agents_mvp.py  test_errors.py
services/graph-api/: .env.local  .env.local.example  Dockerfile  analytics.py  app.py  auth.py  dev.sh  dev_run.sh  geospatial.py  health.py  it_logging.py  metrics.py  opa.py  pyproject.toml
services/graph-api/app/: __init__.py  main_v1.py
services/graph-api/obs/: otel_boot.py
services/graph-api/routes/: alg.py
services/graph-api/scripts/: seed_graph.py
services/graph-api/tests/: conftest.py  test_algorithms.py  test_analysis_routes.py  test_cors.py  test_export.py  test_geospatial.py  test_graph_route.py  test_health.py  test_ingest.py  test_logging.py  test_metrics.py  test_metrics_graph_api.py  test_otel_boot.py  test_tracing_gate.py
services/graph-api/utils/: neo4j_client.py
services/graph-views/: .coverage  .coveragerc  .env.local  .env.local.example  Dockerfile  Makefile  README.md  app.py  app_v1.py  audit.py  db.py  dev.sh  dev_run.sh  geo.py  health.py  it_logging.py  metrics.py  neo.py  pyproject.toml  pytest.ini  rate_limit.py  requirements-dev.txt  response.py  ruff.toml
services/graph-views/_shared/: cors.py  health.py
services/graph-views/common/: request_id.py
services/graph-views/dossier/: api.py  template.md.j2
services/graph-views/models/: view_models.py
services/graph-views/obs/: otel_boot.py
services/graph-views/ontology/: api.py  entities.yaml  models.py  relations.yaml
services/graph-views/routers/: core_v1.py  views_v1.py
services/graph-views/samples/: knows.csv  load_csv.py  people.csv
services/graph-views/tests/: conftest.py  test_app.py  test_cors.py  test_cypher_endpoint.py  test_db_url_building.py  test_dossier_render.py  test_envelopes_all.py  test_export_dossier.py  test_geo_entities.py  test_health.py  test_loader_unit.py  test_logging.py  test_metrics.py  test_metrics_graph_views.py  test_neo_helper_retries.py  test_ontology.py  test_otel_boot.py  test_pool_retry_and_readyz.py  test_query_ok.py  test_rate_limit.py  test_response_utils.py  test_responses_schema.py  test_tracing_gate.py  test_views_read_only.py  test_write_auth_and_guard.py  test_write_guard.py
services/opa-audit-sink/: Dockerfile  app.py  app_v1.py  dev.sh  pyproject.toml  test_v1_migration.py
services/opa-audit-sink/app/: main.py
services/opa-audit-sink/models/: __init__.py  requests.py  responses.py
services/opa-audit-sink/obs/: otel_boot.py
services/opa-audit-sink/routers/: audit_v1.py  core_v1.py
services/search-api/: Dockerfile  README.md  app.py  auth.py  dev.sh  dev_run.sh  opa.py  otel.sh  pyproject.toml  requirements.txt
services/search-api/app/: __init__.py  config.py  health.py  it_logging.py  main.py  metrics.py  rerank.py
services/search-api/obs/: otel_boot.py
services/search-api/tests/: conftest.py  test_auth.py  test_health.py  test_logging.py  test_main_extra.py  test_main_import.py  test_metrics.py  test_opa.py  test_otel_boot.py  test_query_api.py  test_rerank.py  test_search_route.py  test_tracing_gate.py
(+1690 files in other folders)
