[project]
name = "infoterminal-cli"
version = "0.1.0"
description = "Modular CLI for InfoTerminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer[all]",
  "rich",
  "httpx",
  "pydantic>=2",
  "pydantic-settings",
  "plotext",
  "asciichartpy",
  "networkx",
  "textual",
]

[project.scripts]
it = "it_cli.__main__:app"

[project.entry-points."info_terminal.plugins"]
# external packages can register their Typer apps here

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
