[project]
name = "doc-entities"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "httpx>=0.27",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-requests>=0.46b0",
    "opentelemetry-instrumentation-logging>=0.46b0",
    "prometheus-client==0.20.*",
    "prometheus-fastapi-instrumentator==6.1.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --cov=. --cov-report=term-missing --cov-fail-under=92"
asyncio_mode = "auto"
