[project]
name = "feed-ingestor"
version = "0.1.0"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "prometheus-client==0.20.*",
  "pytest-cov>=4.1"
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --cov=app.main --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
