[project]
name = "flowise-connector"
version = "0.1.0"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "prometheus-client==0.20.*",
  "starlette-exporter",
  "opentelemetry-sdk",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-exporter-otlp"
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --cov=app --cov-report=term-missing --cov-fail-under=92"
asyncio_mode = "auto"
