[project]
name = "graph-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111", "uvicorn>=0.30", "neo4j>=5.23",
  "python-jose[cryptography]>=3.3", "httpx>=0.27", "cachetools>=5.3"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "httpx"
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=xml:coverage.xml --cov-report=term-missing"

[tool.uv]
index-url = "https://pypi.org/simple"
