[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "neo4j>=5.23",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "cachetools>=5.3",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp>=1.26.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-requests>=0.46b0",
  "opentelemetry-instrumentation-logging>=0.46b0",
  "prometheus-client==0.20.*",
  "starlette-exporter>=0.15",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "httpx",
]

[tool.setuptools]
# Explicitly declare packages to avoid flat-layout auto-discovery errors
packages = ["app"]
include-package-data = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --cov=. --cov-report=term-missing --cov-fail-under=92"
asyncio_mode = "auto"

[tool.uv]
index-url = "https://pypi.org/simple"
