[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-views"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    # "psycopg2-binary>=2.9",  # legacy sync client; currently unused
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-requests>=0.46b0",
    "opentelemetry-instrumentation-logging>=0.46b0",
    "prometheus-client>=0.20",
    "starlette-exporter>=0.15",
]

[tool.setuptools]
py-modules = ["app", "db", "it_logging", "metrics"]

[tool.uv]
index-url = "https://pypi.org/simple"
