[project]
name = "search-api"
version = "0.1.0"
description = "Search across OpenSearch (Elasticsearch API)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-jose[cryptography]>=3.3",
    "opensearch-py>=2.5",
    "cachetools>=5.3",
    "opentelemetry-distro>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-requests>=0.46b0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
